Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-2270

[Python] ForeignBuffer doesn't tie Python object lifetime to C++ buffer lifetime

    XMLWordPrintableJSON

Details

    Description

      ForeignBuffer keeps the reference to the Python base object in the Python wrapper class, not in the C++ buffer instance, meaning if the C++ buffer gets passed around but the Python wrapper gets destroyed, the reference to the original Python base object will be released.

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: