ARROW-2270: [Python] Fix lifetime of ForeignBuffer base object

Author: Antoine Pitrou <antoine@python.org>

Closes #1714 from pitrou/ARROW-2270-pyforeignbuffer and squashes the following commits:

51f2d85e <Antoine Pitrou> ARROW-2270:  Fix lifetime of ForeignBuffer base object